# bebisim

./: Cargo.toml  dayim.readme  rust-toolchain.toml
.cargo/: config.toml
src/: action.rs  entities.rs  main.rs  server.rs
src/constants/: names.rs
src/entities/: device.rs  person.rs  world.rs
ui/: event_handlers.js  index.html  index.js  main.css
