[package]
name = "pocketlink"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "net", "sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12.5"
rand = "0.9.2"
